adicionei algumas funcionalidades para responsividade porem ainda estou trabalhando nisso

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
             <div class="playground">Playground</div>
             <div class="login">Login</div>
         </div>
+        <div class="menu-hamburguer" onclick="toggleMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </header>
     <div class="framer">
         <div class="topo">
